--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "event-target-shim": "^5.0.1",
     "expo": "~53.0.20",
+    "expo-camera": "~16.1.11",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
-    "socket.io-client": "^4.8.1",
     "react-dom": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-webrtc": "^124.0.6",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
